commit tree 451d687ee50f0ec01e48fc7ae284527c2af86241

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 
   <!-- Your code here -->
 
+  <img src="hi.jpg">
+  <img src="hi.jpg" alt="sup">
+  <img src="hi.jpg" alt="sup" title="hihi">
 </body>
 </html>
